@@ -2,7 +2,7 @@
               implementations
 
    Copyright (c) 2011-2013 Universidad Rey Juan Carlos
-                 2011-2019 Pekka Jääskeläinen
+                 2011-2021 Pekka Jääskeläinen
 
    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to
